--- a/libs/player/src/lib/styles/player.scss
+++ b/libs/player/src/lib/styles/player.scss
@@ -56,7 +56,7 @@
 	display: flex;
 	flex-direction: column;
 	cursor: default;
-	padding: 10px 15px;
+	padding: 10px;
 	gap: 10px;
 	position: absolute;
 	bottom: 0;
@@ -104,6 +104,7 @@
 
 .AngelinPlayer__timeline {
 	--grabberShadow: 0 0 3px 0 rgba(0, 0, 0, 0.1);
+	padding: 0 5px;
 	height: 6px;
 	transition: 0.15s;
 	box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
@@ -159,5 +160,9 @@
 
 .AngelinPlayer__controls-buttons__group {
 	display: flex;
-	gap: 10px;
+}
+
+.AngelinPlayer__controls-volumeslider {
+	appearance: none;
+	background-color: rgba(255, 255, 255, 0.5);
 }
