--- a/libs/player/src/lib/styles/player.scss
+++ b/libs/player/src/lib/styles/player.scss
@@ -71,7 +71,6 @@
 	display: flex;
 	flex-direction: column;
 	cursor: default;
-	// gap: 10px;
 	position: absolute;
 	bottom: 0;
 	opacity: 0;
@@ -184,6 +183,7 @@
 	cursor: pointer;
 	appearance: none;
 	height: 6px;
+	border-radius: 100px;
 	background-color: rgba(255, 255, 255, 0.5);
 	background-image: linear-gradient(
 		var(--color-primary),
@@ -212,8 +212,16 @@
 
 .AngelinPlayer__menu {
 	position: relative;
-	&:hover .AngelinPlayer__menu-list {
-		display: block;
+}
+
+@keyframes menuAnimation {
+	from {
+		transform: translateY(2px);
+		opacity: 0;
+	}
+	to {
+		transform: translateY(0);
+		opacity: 1;
 	}
 }
 
@@ -221,10 +229,10 @@
 	position: absolute;
 	background-color: rgba(0, 0, 0, 0.75);
 	border-radius: 5px;
-	display: none;
 	bottom: 40px;
 	right: 0;
 	text-align: center;
+	animation: menuAnimation 0.15s forwards;
 }
 
 .AngelinPlayer__menu-list__item {
