--- a/libs/player/src/lib/styles/player.scss
+++ b/libs/player/src/lib/styles/player.scss
@@ -3,6 +3,7 @@
 	--color-text: rgb(225, 225, 225);
 	--shadow-grabber: 0 0 3px 0 rgba(0, 0, 0, 0.25);
 	--icon-size: 30px;
+	--font-family: Fira Sans, sans-serif;
 	position: relative;
 	display: flex;
 	align-items: center;
@@ -10,7 +11,7 @@
 	cursor: pointer;
 	max-width: 100%;
 	color: var(--color-text);
-	font-family: Fira Sans, sans-serif;
+	font-family: var(--font-family);
 	&::before {
 		content: "";
 		opacity: 0;
@@ -45,11 +46,12 @@
 		list-style-type: none;
 	}
 	button {
-		font-family: inherit;
+		font-family: var(--font-family);
 		color: var(--color-text);
 		cursor: pointer;
 		background: none;
 		border: none;
+		font-size: 1rem;
 	}
 }
 
@@ -121,17 +123,11 @@
 	height: 6px;
 	transition: 0.15s;
 	box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.1);
-	// .AngelinPlayer__timeline-track__progress::after {
-	// 	box-shadow: var(--shadow-grabber);
-	// }
-	// &:active .AngelinPlayer__timeline-track__progress::after {
-	// 	box-shadow: var(--shadow-grabber), 0 0 0 3px rgba(255, 255, 255, 0.25);
-	// }
 }
 
 .AngelinPlayer__timeline-track {
 	cursor: pointer;
-	background-color: rgba(255, 255, 255, 0.5);
+	background-color: rgba(255, 255, 255, 0.25);
 	height: 100%;
 	width: 100%;
 }
@@ -226,38 +222,69 @@
 }
 
 .AngelinPlayer__menu-list {
+	display: flex;
+	flex-direction: column;
+	gap: 2px;
 	position: absolute;
-	background-color: rgba(0, 0, 0, 0.75);
+	background-color: rgb(25, 25, 25);
 	border-radius: 5px;
-	bottom: 40px;
+	bottom: 51px;
+	padding: 10px;
 	right: 0;
-	text-align: center;
 	animation: menuAnimation 0.15s forwards;
 }
 
 .AngelinPlayer__menu-list__item {
-	position: relative;
+	min-width: 100px;
+	max-width: 100%;
+	border-radius: 5px;
+	user-select: none;
 	&[data-active="true"] {
-		&::after {
-			content: "";
-			transform: translateY(-50%);
-			position: absolute;
-			top: 50%;
-			left: 0;
-			width: 2px;
-			height: 50%;
-			background-color: var(--color-primary);
-		}
+		cursor: pointer;
 		.AngelinPlayer__menu-list__item-button {
+			pointer-events: none;
 			color: var(--color-primary);
 		}
 	}
 }
 
 .AngelinPlayer__menu-list__item-button {
-	font-weight: 600;
-	padding: 10px 15px;
+	border-radius: 5px;
+	padding: 8px;
+	width: 100%;
+	text-align: left;
 	&:hover {
-		color: var(--color-primary);
+		background-color: rgb(50, 50, 50);
 	}
+	&:active {
+		background-color: rgb(45, 45, 45);
+	}
+}
+
+.AngelinPlayer__menu-list__item-close {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 100%;
+	padding: 0 8px;
+}
+
+.AngelinPlayer__menu-list__item-close__button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-left: 8px;
+}
+
+.AngelinPlayer__menu-list__item-close__button-icon {
+	width: 20px;
+	height: 20px;
+	fill: var(--color-text);
+}
+
+.AngelinPlayer__menu-list__divider {
+	margin: 5px 0;
+	height: 1px;
+	border: none;
+	background-color: rgb(75, 75, 75);
 }
