--- a/libs/player/src/lib/styles/player.scss
+++ b/libs/player/src/lib/styles/player.scss
@@ -223,16 +223,19 @@
 }
 
 .AngelinPlayer__menu-list {
-	display: flex;
+	display: none;
 	flex-direction: column;
 	gap: 2px;
 	position: absolute;
 	background-color: rgb(25, 25, 25);
 	border-radius: 5px;
-	bottom: 51px;
+	bottom: 55px;
 	padding: 10px;
 	right: 0;
 	animation: menuAnimation 0.15s forwards;
+	&[data-open="true"] {
+		display: flex;
+	}
 }
 
 .AngelinPlayer__menu-list__item {
