--- a/libs/player/src/lib/styles/player.scss
+++ b/libs/player/src/lib/styles/player.scss
@@ -58,6 +58,7 @@
 
 .AngelinPlayer__video {
 	width: 100%;
+	height: 100%;
 	max-width: 100%;
 	max-height: 100%;
 	background-color: black;
@@ -299,4 +300,8 @@
 	height: 1px;
 	border: none;
 	background-color: rgb(75, 75, 75);
+}
+
+.AngelinPlayer__controls-progress {
+	margin-left: 10px;
 }
