--- a/libs/player/src/lib/styles/player.scss
+++ b/libs/player/src/lib/styles/player.scss
@@ -280,21 +280,18 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin-left: 16px;
-	border-radius: 5px;
-	padding: 5px;
 	&:hover {
-		background-color: rgb(50, 50, 50);
-	}
-	&:active {
-		background-color: rgb(45, 45, 45);
+		.AngelinPlayer__menu-list__item-close__button-icon {
+			--color: var(--color-primary);
+		}
 	}
 }
 
 .AngelinPlayer__menu-list__item-close__button-icon {
+	--color: var(--color-text);
 	width: 20px;
 	height: 20px;
-	fill: var(--color-text);
+	fill: var(--color);
 }
 
 .AngelinPlayer__menu-list__divider {
