--- a/libs/player/src/lib/styles/player.scss
+++ b/libs/player/src/lib/styles/player.scss
@@ -130,6 +130,7 @@
 
 .AngelinPlayer__timeline {
 	height: 6px;
+	margin: 0 5px;
 	transition: 0.15s;
 	box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.1);
 }
