--- a/libs/player/src/lib/styles/player.scss
+++ b/libs/player/src/lib/styles/player.scss
@@ -43,7 +43,6 @@
 	*,
 	*::before,
 	*::after {
-		margin: 0;
 		padding: 0;
 		box-sizing: border-box;
 		list-style-type: none;
@@ -161,21 +160,17 @@
 }
 
 .AngelinPlayer__big-resume-icon {
-	--transform: translate(-50%, -50%);
-	opacity: 1;
 	pointer-events: none;
 	position: absolute;
-	transform: var(--transform);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transform: translate(-50%, -50%);
 	top: 50%;
 	left: 50%;
 	width: 65px;
 	filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.35));
 	fill: var(--color-text);
-	&[data-hidden="true"] {
-		transform: var(--transform) scale(1.5);
-		transition: 0.35s;
-		opacity: 0;
-	}
 }
 
 .AngelinPlayer__controls-buttons__group {
